--- a/esc-stats.Rmd
+++ b/esc-stats.Rmd
@@ -100,9 +100,9 @@ Games.df |>
 
 Statistics by court separation distance
 ```{r}
-remove <- c("Drew", "Craig", "Zack")
+#remove <- c("Drew", "Craig", "Zack")
 Games.df |>
-  dplyr::filter(!Player1a %in% remove & !Player1b %in% remove & !Player2a %in% remove & !Player2b %in% remove) |>
+#  dplyr::filter(!Player1a %in% remove & !Player1b %in% remove & !Player2a %in% remove & !Player2b %in% remove) |>
   dplyr::filter(Event == "Winter League") |>
   dplyr::group_by(CourtSeparation) |>
   dplyr::summarise(Games = dplyr::n(),
@@ -115,12 +115,29 @@ Games.df |>
                    FracGamesGT1 = sum(Fundex >= 1)/Games)
 ```
 
+Statistical tests
+```{r}
+short <- Games.df |>
+  dplyr::filter(Event == "Winter League") |>
+  dplyr::filter(CourtSeparation == 17) |>
+  dplyr::select(Fundex) |>
+  as.vector()
+long <- Games.df |>
+  dplyr::filter(Event == "Winter League") |>
+  dplyr::filter(CourtSeparation == 18.4) |>
+  dplyr::select(Fundex) |>
+  as.vector()
+
+wilcox.test(short$Fundex, long$Fundex)
+t.test(short$Fundex, long$Fundex)
+```
+
 Statistics by court separation distance, keep only single player
 ```{r}
-player <- "Maya"
+player <- "Didi"
 Games.df |>
   dplyr::filter(Player1a == player | Player1b == player | Player2a == player | Player2b == player) |>
-  dplyr::filter(Event == "Winter League" | Event == "Summer League") |>
+  dplyr::filter(Event == "Winter League") |>
   dplyr::group_by(CourtSeparation) |>
   dplyr::summarise(Games = dplyr::n(),
                    Least = round(min(Fundex), 2),
@@ -134,7 +151,7 @@ Games.df |>
 
 Which games were most "fun" by player
 ```{r}
-plyr <- "Oscar"
+plyr <- "JaSun"
 
 Games.df |>
   dplyr::filter(Player1a == plyr | Player1b == plyr | Player2a == plyr | Player2b == plyr) |>
